@@ -1,10 +1,10 @@
 sysconfdir = @sysconfdir@/@PACKAGE@
 
-src_wrappers = chroot.fakechroot.sh fakechroot.sh ldd.fakechroot.pl
+src_wrappers = chroot.fakechroot.sh env.fakechroot.sh fakechroot.sh ldd.fakechroot.pl
 src_envs = chroot.env.sh debootstrap.env.sh rinse.env.sh
 example_scripts = relocatesymlinks.sh restoremode.sh savemode.sh
 
-bin_SCRIPTS = fakechroot ldd.fakechroot
+bin_SCRIPTS = env.fakechroot fakechroot ldd.fakechroot
 sbin_SCRIPTS = chroot.fakechroot
 sysconf_DATA = chroot.env debootstrap.env rinse.env
 
@@ -16,6 +16,11 @@ do_subst = sed -e 's,[@]bindir[@],$(bindir),g' \
                -e 's,[@]sbindir[@],$(sbindir),g' \
                -e 's,[@]sysconfdir[@],$(sysconfdir),g' \
                -e 's,[@]CHROOT[@],$(CHROOT),g' \
+               -e 's,[@]ENV[@],$(ENV),g' \
+               -e 's,[@]EGREP[@],$(EGREP),g' \
+               -e 's,[@]ISCHROOT[@],$(ISCHROOT),g' \
+               -e 's,[@]LDCONFIG[@],$(LDCONFIG),g' \
+               -e 's,[@]LDD[@],$(LDD),g' \
                -e 's,[@]VERSION[@],$(VERSION),g'
 
 chroot.env: $(srcdir)/chroot.env.sh
@@ -28,6 +33,10 @@ chroot.fakechroot: $(srcdir)/chroot.fakechroot.sh
 
 debootstrap.env: $(srcdir)/debootstrap.env.sh
 	$(do_subst) < $(srcdir)/debootstrap.env.sh > $@
+	chmod +x $@
+
+env.fakechroot: $(srcdir)/env.fakechroot.sh
+	$(do_subst) < $(srcdir)/env.fakechroot.sh > $@
 	chmod +x $@
 
 fakechroot: $(srcdir)/fakechroot.sh
