@@ -8,10 +8,11 @@ if ! command -v chroot >/dev/null; then
     export PATH
 fi
 
-chroot=`command -v chroot`
-ldd=`command -v ldd`
+FAKECHROOT_CMD_SUBST="${FAKECHROOT_CMD_SUBST:+$FAKECHROOT_CMD_SUBST:}\
+`command -v chroot`=$abs_top_srcdir/scripts/chroot.fakechroot:\
+`command -v env`=$abs_top_srcdir/scripts/env.fakechroot:\
+`command -v ldd`=$abs_top_srcdir/scripts/ldd.fakechroot"
 
-FAKECHROOT_CMD_SUBST="${FAKECHROOT_CMD_SUBST:+$FAKECHROOT_CMD_SUBST:}$chroot=$abs_top_srcdir/scripts/chroot.fakechroot:$ldd=$abs_top_srcdir/scripts/ldd.fakechroot"
 export FAKECHROOT_CMD_SUBST
 
 "$abs_top_srcdir/scripts/fakechroot" -c "$abs_top_srcdir/scripts" -l "$abs_top_srcdir/src/.libs/libfakechroot.so" "$@"
